test/Fail/Issue4880.err
Issue4880.agda:7.9-14: error: [NothingAppliedToHiddenArg]
{A} cannot appear by itself. It needs to be the argument to a
function expecting an implicit argument.
when scope checking {A}
